<resources>
    <string name="app_name">Bienvenido a MySPA</string>
    <string name="descripcion">Descripcion</string>
    <string name="title_activity_token">activity_token</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_inicio">Inicio</string>
    <string name="menu_sucursal">Sucursal</string>
    <string name="menu_tratamiento">Tratamiento</string>
    <string name="menu_producto">Producto</string>
    <string name="menu_sala">Sala</string>
    <string name="menu_reservacion">Reservación</string>
</resources>
