<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/nav_sucursal"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_sucursal" />
        <item
            android:id="@+id/nav_producto"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_producto" />
        <item
            android:id="@+id/nav_reservacion"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_reservacion" />

        <item
            android:id="@+id/nav_sala"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_sala" />
        <item
            android:id="@+id/nav_tratamiento"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_tratamiento" />
    </group>

    <item android:title="Communicate">
        <menu>

        </menu>
    </item>

</menu>
